--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pusuluri Jathin Chowdary - Portfolio</title>
+    <title>My Portfolio</title>
+    <link rel="icon" href="./logo.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -14,7 +15,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <span class="logo-text">Jathin</span>
-                <span class="logo-dot">.</span>
+                <span class="logo-dot">Pusuluri</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -38,9 +39,8 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        <span class="hero-name">Pusuluri Jathin Chowdary</span>
-                        <span class="hero-profession">Electronics & IoT Developer</span>
-                        <span class="hero-subtitle">Full-Stack Enthusiast | Workshop Organizer</span>
+                        <span class="hero-name">Jathin Pusuluri</span>
+                        <span class="hero-subtitle">Embedded Systems Enthusiast | Web Developer</span>
                     </h1>
                     <p class="hero-description">
                         Passionate about creating innovative solutions at the intersection of hardware and software. 
@@ -53,7 +53,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="hero-card">
-                        <img src="https://images.unsplash.com/photo-1562408590-e32931084e23" alt="Electronics Circuit Board">
+                        <img src="./profile pic.png" alt="Profile Photo">
                     </div>
                 </div>
             </div>
@@ -70,16 +70,12 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="about-description">
-                        Hi! I'm Jathin — an aspiring Electronics & Communication Engineer passionate about 
-                        Embedded Systems, IoT, and building impactful web applications. I love translating 
-                        innovative ideas into real-world solutions and enjoy helping others learn through 
-                        workshops and collaborative projects.
+                        Hi, I’m Jathin — an Electrical & Electronics Engineering student with a keen interest in Embedded Systems, IoT, and modern web development. I enjoy bridging the gap between hardware and software, turning ideas into practical solutions that have a real-world impact.
                     </p>
                     <p class="about-mission">
-                        I thrive at the intersection of hardware and software — combining my love for 
-                        electronics with modern web technologies. When I'm not building projects, I enjoy 
-                        hosting workshops that inspire my peers to innovate. I'm eager to collaborate, 
-                        learn, and contribute to meaningful tech solutions.
+                        Beyond building projects, I’m passionate about sharing knowledge and encouraging others to innovate. I regularly organize and lead workshops to help my peers explore new technologies and develop hands-on skills.
+
+I’m always eager to collaborate, learn from like-minded people, and contribute to projects that make technology more meaningful and accessible.
                     </p>
                     <div class="about-stats">
                         <div class="stat">
@@ -90,15 +86,12 @@
                             <span class="stat-number">2+</span>
                             <span class="stat-label">Certificates</span>
                         </div>
-                        <div class="stat">
-                            <span class="stat-number">1+</span>
-                            <span class="stat-label">Years Experience</span>
-                        </div>
+
                     </div>
                 </div>
                 <div class="about-image">
                     <div class="about-card">
-                        <img src="https://images.unsplash.com/photo-1614846027182-cecfee3a427b" alt="IoT Development">
+                        <img src="./theme.png" alt="Theme">
                     </div>
                 </div>
             </div>
@@ -123,22 +116,8 @@
                         <ul class="timeline-responsibilities">
                             <li>Completed 15-day internship at KTPS-VII Stage (1x800 MW)</li>
                             <li>Explored real-world workings of thermal power plant operations</li>
-                            <li>Applied B.Tech concepts: transformers, circuit breakers, SCADA, power systems</li>
+                            <li>Applied B.Tech concepts: transformers, circuit breakers, Power systems</li>
                             <li>Gained hands-on experience in Power Generation and Thermal Power Plant</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3 class="timeline-title">Core Team Member</h3>
-                        <h4 class="timeline-company">Daksh Workshops, SASTRA University</h4>
-                        <p class="timeline-duration">Present</p>
-                        <ul class="timeline-responsibilities">
-                            <li>Organize and execute technical workshops on trending technologies</li>
-                            <li>Manage logistics, resource planning, and student engagement</li>
-                            <li>Mentor peers in practical hands-on sessions</li>
-                            <li>Coordinate with industry experts for guest lectures</li>
                         </ul>
                     </div>
                 </div>
@@ -204,33 +183,21 @@
                     <div class="skill-grid">
                         <div class="skill-item">
                             <div class="skill-icon">
+                                <i class="fas fa-code"></i>
+                            </div>
+                            <span class="skill-name">Web Development</span>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-icon">
                                 <i class="fas fa-microchip"></i>
                             </div>
                             <span class="skill-name">Embedded Systems</span>
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon">
-                                <i class="fas fa-wifi"></i>
+                                <i class="fas fa-c programming"></i>
                             </div>
-                            <span class="skill-name">IoT Development</span>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-icon">
-                                <i class="fas fa-code"></i>
-                            </div>
-                            <span class="skill-name">Full-Stack Development</span>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-icon">
-                                <i class="fab fa-js"></i>
-                            </div>
-                            <span class="skill-name">JavaScript</span>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-icon">
-                                <i class="fab fa-node-js"></i>
-                            </div>
-                            <span class="skill-name">Node.js</span>
+                            <span class="skill-name">C Programming</span>
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon">
@@ -240,9 +207,9 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon">
-                                <i class="fas fa-database"></i>
+                                <i class="fab fa-java"></i>
                             </div>
-                            <span class="skill-name">C/C++</span>
+                            <span class="skill-name">Java</span>
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon">
@@ -281,9 +248,9 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon">
-                                <i class="fas fa-microphone"></i>
+                                <i class="fas fa-clock"></i>
                             </div>
-                            <span class="skill-name">Public Speaking</span>
+                            <span class="skill-name">Time Management</span>
                         </div>
                     </div>
                 </div>
@@ -301,7 +268,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1610878785620-3ab2d3a2ae7b" alt="Smart EV Accident Detection">
+                        <img src="./smartev.png" alt="Smart EV Accident Detection">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link"><i class="fas fa-eye"></i></a>
@@ -326,7 +293,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1457305237443-44c3d5a30b89" alt="EAMCET College Predictor">
+                        <img src="./eamcet.png" alt="EAMCET College Predictor">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://jathin021.github.io/EAMCET-College-Predictor/" class="project-link" target="_blank"><i class="fas fa-eye"></i></a>
@@ -337,21 +304,22 @@
                     <div class="project-content">
                         <h3 class="project-title">EAMCET College Predictor</h3>
                         <p class="project-description">
-                            A web application predicting possible TS/AP EAMCET colleges based on user ranks. 
+                            A web application predicting possible TG/AP EAMCET colleges based on user ranks. 
                             Helps students make informed decisions about college admissions.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Node.js</span>
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
                             <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Node.js</span>
                             <span class="tech-tag">JSON</span>
-                            <span class="tech-tag">GitHub Pages</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg" alt="Crush Prompt">
+                        <img src="./crush.png" alt="Crush Prompt">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://jathin021.github.io/Crush-Prompt/" class="project-link" target="_blank"><i class="fas fa-eye"></i></a>
@@ -369,7 +337,6 @@
                             <span class="tech-tag">HTML</span>
                             <span class="tech-tag">CSS</span>
                             <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Animations</span>
                         </div>
                     </div>
                 </div>
@@ -395,6 +362,16 @@
                         <p class="achievement-date">July 2024</p>
                     </div>
                 </div>
+                 <div class="achievement-card">
+                    <div class="achievement-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="achievement-content">
+                        <h3 class="achievement-title">Web Development Certificate</h3>
+                        <p class="achievement-issuer">Udemy</p>
+                        <p class="achievement-date">November 2024</p>
+                    </div>
+                </div>
                 <div class="achievement-card">
                     <div class="achievement-icon">
                         <i class="fas fa-microchip"></i>
@@ -402,7 +379,7 @@
                     <div class="achievement-content">
                         <h3 class="achievement-title">Embedded System Certificate</h3>
                         <p class="achievement-issuer">Internshala</p>
-                        <p class="achievement-date">2024</p>
+                        <p class="achievement-date">July 2025</p>
                     </div>
                 </div>
             </div>
@@ -486,8 +463,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Pusuluri Jathin Chowdary. All rights reserved.</p>
-                <p>Built with passion for technology and innovation.</p>
+                <p>&copy; 2025 Jathin Pusuluri.</p>
             </div>
         </div>
     </footer>
