--- a/resume.html
+++ b/resume.html
@@ -226,16 +226,16 @@
             <span class="edu-inst">SASTRA Deemed University, Thanjavur</span>
             <span class="edu-grade">CGPA: 8.0863</span>
             <div class="edu-entry">
-                <span class="edu-left">Intermediate (Class 11 & 12)</span>
+                <span class="edu-left">Intermediate</span>
                 <span class="edu-right">Jun 2020 - Jul 2022</span>
             </div>
-            <span class="edu-inst">Sri Chaitanya College of Education</span>
+            <span class="edu-inst">Sri Chaitanya College, Khammam</span>
             <span class="edu-grade">Grade: 97.5%</span>
             <div class="edu-entry">
-                <span class="edu-left">Class 10</span>
+                <span class="edu-left">SSC</span>
                 <span class="edu-right">Jun 2019 - May 2020</span>
             </div>
-            <span class="edu-inst">New Vision School</span>
+            <span class="edu-inst">New Vision School, Khammam</span>
             <span class="edu-grade">CGPA: 10.0</span>
         </div>
         <hr>
